# modelado-control-dron

./: .gitignore  Dron_fisico.md  Phase-2_Idea.md  README.md  informe_revision.md  pyproject.toml  skills-lock.json
docs/: Dron_fisico.md  IDEA.md  PRD_control_neuronal_operable.md  PRD_documentacion_integral_tfg.md  PRD_flujo_minimo_pd_redes.md  PRD_phase2_control_neuronal.md  PRD_simulador_multirotor.md  Phase-2_Idea.md  README.md  arquitectura_software.md  backlog_tecnico.md  documentation_inventory.md  documentation_map.md  estado_actual_simulador.md  extension-points.md  fisica_y_matematicas.md  phase1_baseline_dron_generico.md  phase2-control-neuronal-dataset-spec.md  phase6_robustness_and_delivery.md  propuesta_tareas_por_ambitos_2026-04-15.md  reference_scenarios.md  revision_en_profundidad_2026-04-15.md
plans/: control-neuronal-operable-plan.md  control-neuronal-operable-task-breakdown.md  documentacion-integral-tfg-plan.md  documentacion-integral-tfg-task-breakdown.md  flujo-minimo-pd-redes-plan.md  flujo-minimo-pd-redes-task-breakdown.md  phase1-simulador-multirotor-plan.md  phase1-simulador-multirotor-task-breakdown.md  phase1-v2-mejoras-fisica-task-breakdown.md  phase2-control-neuronal-plan.md  phase2-control-neuronal-task-breakdown.md  simulador-multirotor-plan.md
tests/: test_aerodynamics.py  test_baseline_profile.py  test_benchmark_cli_phase4.py  test_contracts.py  test_control.py  test_dataset_cli_phase2.py  test_dataset_phase2.py  test_dynamics.py  test_imports.py  test_metrics.py  test_mlp_phase3.py  test_pd_validation_phase2.py  test_runner.py  (+11 more)
(+104 files in other folders)
