[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulador-multirotor"
version = "0.1.0"
description = "Simulador modular para control inteligente de un dron multirotor."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
multirotor-sim = "simulador_multirotor.app:main"

[dependency-groups]
dev = ["pytest>=8.3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

